ansible/files/spinnaker-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinnaker
  namespace: spinnaker
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spin-deck
            port:
              number: 9000
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: spin-gate
            port:
              number: 8084
